--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -3,8 +3,8 @@
 "Location services are disabled in your device settings. To use background sync feature of lifebox, you need to enable location services under \"Settings - Privacy - Location Services\" menu." = "Cihaz ayarlarındaki konum servisleri devre dışı durumda. Arka planda lifebox’un otomatik yedekleme özelliğini kullanmak için “Ayarlar – Gizlilik – Konum Servisleri” üzerinden konum servislerini etkinleştirmen gerek.";
 "This file will be removed only from your album. You can access this file from Photos tab" = "Bu dosya sadece albümünden kaldırılacak. Fotoğraflar sekmesi üzerinden bu dosyaya erişebilirsin. Çıkarmak istediğine emin misin?";
 "Deleting this album will not remove the files from lifebox. You can access these files from Photos tab. Are you sure you want to delete?" = "Bu albümü sildiğinde albümün içindeki dosyalar lifebox'ında kalmaya devam edecek. Dosyalarına Fotoğraflar sekmesinden ulaşabilirsin. Silmek istediğine emin misin?";
-"Deleting this album will remove the files from lifebox. You won't be able to access them once deleted. Are you sure you want to delete?" = "Seçilen dosya(lar) çöp kutusuna taşınacak. 30 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
-"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Seçilen dosya(lar) çöp kutusuna taşınacak. 30 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
+"Deleting this album will remove the files from lifebox. You won't be able to access them once deleted. Are you sure you want to delete?" = "Seçilen dosya(lar) çöp kutusuna taşınacak. 90 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
+"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Seçilen dosya(lar) çöp kutusuna taşınacak. 90 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
 "Purchase" = "Satın Al";
 "Packages" = "Paketler";
 "Verification code is blocked.\nPlease request a new code" = "Doğrulama kodu bloke durumda. Lütfen yeni bir kod talep et.";
@@ -961,7 +961,7 @@
 "re_enter_your_password" = "Şifreni tekrar gir";
 "signup_support_info" = "Kayıt olmakta zorluk çekiyorsan, destek için bizimle iletişime geçebilirsin";
 "missing_information" = "Eksik Bilgi";
-"please_enter_your_missing_account_information" = "Lütfen eksik bilgilerini gir:";
+"please_enter_your_missing_account_information" = "E-posta adresini lifebox’a eklemen hesabını bir ömür  koruyabilmek için en güvenilir yoldur. Telefon numaran ya da operatörün değişse bile lifebox’taki anılarına ulaşmaya devam etmek için lütfen e-posta adresini ekle.";
 "login_email_or_phone_placeholder" = "Email veya telefon numaranı gir";
 "login_password_placeholder" = "Şifreni gir";
 "login_email_or_phone_error" = "E-mail veya telefon numaranı girmen gerekiyor.";
@@ -1296,7 +1296,7 @@
 "profile_detail_address_placeholder" = "Lütfen adres bilgilerini gir";
 "profile_detail_error_contact_call_center" = "Numaranı değiştirmek için lütfen çağrı merkezi ile iletişime geç";
 "temporary_error" = "Geçici bir hata oluştu, lütfen tekrar dene";
-"move_to_trash_albums_message" = "Seçilen albüm(ler) çöp kutusuna taşınacak. Albüm ve içindeki öğeleri 30 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
+"move_to_trash_albums_message" = "Seçilen albüm(ler) çöp kutusuna taşınacak. Albüm ve içindeki öğeleri 90 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
 "move_to_trash_albums_success_message" = "Albüm(ler) ve içerikleri çöp kutusuna gönderildi.";
 "confirmation_popup_title_hide" = "Gizle";
 "confirmation_popup_message_hide" = "Seçilen öğe(ler) gizlenerek sadece \"Gizli\" albümünden erişilebilecek. lifebox listelerinde ya da hatırlatmalarında ilgili içerikler gelmeyecek. İstediğin zaman geri yükleyebilirsin. Devam etmek istiyor musun?";
@@ -1344,7 +1344,7 @@
 "carousel_view_second_page_title" = "İstemediğin Kişileri Gizle!";
 "carousel_view_second_page_text" = "Artık fotoğraflar listende ve ana sayfa önerilerinde karşına çıkmasını istemediğin kişiler varsa, kişi albümüne girip \"Gizle\" demen yeterli. İstenmeyen kişiler tek tuşla \"Gizli\" albümüne otomatik atılır. İstediğin zaman bu işlemi geri alabilirsin.";
 "carousel_view_third_page_title" = "İstemediğin Kişileri Sil!";
-"carousel_view_third_page_text" = "Bir kişiyi ve ona ait anıları yedeğinde tutmaya değer görmüyorsan kişi albümü içinde \"Sil\" aksiyonunu seçerek bir kerede çöp kutusuna atabilirsin. Pişman olursan diye çöp kutusundan 30 gün içinde geri yükleme özelliğini kullanabilirsin. Ben anılarımdan sonsuza kadar kopamam ama sürekli önüme de çıkmasın dersen gizleme aksiyonu hemen silmenin üzerinde.";
+"carousel_view_third_page_text" = "Bir kişiyi ve ona ait anıları yedeğinde tutmaya değer görmüyorsan kişi albümü içinde \"Sil\" aksiyonunu seçerek bir kerede çöp kutusuna atabilirsin. Pişman olursan diye çöp kutusundan 90 gün içinde geri yükleme özelliğini kullanabilirsin. Ben anılarımdan sonsuza kadar kopamam ama sürekli önüme de çıkmasın dersen gizleme aksiyonu hemen silmenin üzerinde.";
 "hidden_bin_album_slider_title" = "Gizli";
 "hidden_bin_album_slider_empty" = "Henüz gizlenmiş bir kişi, obje, yer vb albümün yok. Herhangi bir albümü seçip tek seferde gizleyebilirsin.";
 "hidden_bin_empty" = "Henüz gizlediğin bir fotoğraf yok. Fotoğraf seçip \"Gizle\" demen yeterli.";
@@ -1357,17 +1357,17 @@
 "trash_bin_album_slider_empty" = "Çöp Kutusunda Henüz Silinmiş Albüm Yok";
 "trash_bin_empty" = "Çöp Kutusunda Henüz Silinmiş Öğe Yok";
 "delete_confirmation_popup_title" = "Sil";
-"delete_confirmation_popup_text" = "Seçilen öğe(ler) çöp kutusuna taşınacak. 30 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
+"delete_confirmation_popup_text" = "Seçilen öğe(ler) çöp kutusuna taşınacak. 90 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
 "restore_confirmation_popup_title" = "Geri Yükle";
 "restore_confirmation_popup_text" = "Seçilen öğe(ler) geri yüklenecek. Devam etmek istiyor musun?";
 "delete_from_hidden_bin_popup_success_title" = "Sil";
-"delete_from_hidden_bin_popup_success_text" = "Seçilen dosya(lar) çöp kutusuna taşınacak. 30 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
+"delete_from_hidden_bin_popup_success_text" = "Seçilen dosya(lar) çöp kutusuna taşınacak. 90 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
 "unhide_popup_success_title" = "Öğe(ler) geri yüklendi.";
-"delete_popup_text" = "Seçilen dosya(lar) çöp kutusuna taşınacak. 30 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
+"delete_popup_text" = "Seçilen dosya(lar) çöp kutusuna taşınacak. 90 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
 "PackagesPolicyTextBillo" = "Abonelikler aylık bazda yenilenmekte ve ödeme, satın alma onayından sonra iTunes hesabına faturalandırılmaktadır. \nOtomatik yenileme mevcut dönemin sona ermesinden en az 24 saat önce kapatılmazsa abonelik otomatik olarak yenilenir. \nHesap, mevcut dönemin sona ermesine 24 saat kala yenileme işlemi doğrultusunda ücretlendirilecektir. Ücretler uygulama içi satın alma ekranında gösterildiği gibi yansıtılacaktır.\nAbonelikler kullanıcı tarafından yönetilebilir ve otomatik yenileme, satın alma işleminden sonra kullanıcının Hesap Ayarlarına giderek kapatılabilir. \nGizlilik ve Güvenlik: https://billostorage.com/policy\nKullanım Şartları:";
 "unhide_items_popup_text" = "Seçilen öğe(ler) eski klasörlerine geri taşınacak ve lifebox listelerinde görüntülenebilmeye başlayacak. Devam etmek istiyor musun?";
 "unhide_albums_popup_text" = "Seçilen albüm(ler) ve içerikleri eski klasörlerine geri taşınacak ve lifebox listelerinde görüntülenebilmeye başlayacak. Devam etmek istiyor musun?";
-"move_to_trash_hidden_albums_confirmation_popup_text" = "Seçilen albüm(ler) ve içerikleri çöp kutusuna taşınacak. Albüm ve içindeki öğeleri 30 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
+"move_to_trash_hidden_albums_confirmation_popup_text" = "Seçilen albüm(ler) ve içerikleri çöp kutusuna taşınacak. Albüm ve içindeki öğeleri 90 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma.";
 "delete_items_confirmation_popup_text" = "Seçilen öğe(ler) lifebox'tan tamamen kaldırılacak. Devam etmek istiyor musun?";
 "delete_albums_confirmation_popup_text" = "Seçilen albüm(ler) ve içerikleri lifebox'tan tamamen kaldırılacak. Devam etmek istiyor musun?";
 "delete_folders_confirmation_popup_text" = "Seçilen dosya(lar) ve içerikleri lifebox'tan tamamen kaldırılacak. Devam etmek istiyor musun?";
@@ -1479,35 +1479,6 @@
 "offer_store_promo" = "Promo";
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
-"remove_albums_success_message" = "Albüm(ler) kaldırıldı.";
-"hide_album_action_sheet" = "Album Gizle";
-"sign_up_password_rules" = "Lütfen ardışık olmayan harf ve sayılardan oluşan, en az 6 en fazla 16 karakterli bir şifre belirleyin.";
-"documents_album_card_title" = "Döküman albümünü gizlemek ister misin?";
-"documents_album_card_description" = "Döküman albümünde %d adet fotoğraf var. Bu albümü gizleyebilir ve daha sonra ulaşabilirsin";
-"documents_album_card_hide_button" = "Döküman albümünü gizle";
-"documents_album_card_view_button" = "Döküman albümünü görüntüle";
-"snackbar_ok" = "Tamam";
-"snackbar_trash_bin" = "Çöp Kutusu";
-"snackbar_hidden_bin" = "Gizli Albüm";
-"analyze_history_delete_success" = "%d dosya(lar) silindi";
-"added_to_favorites_message" = "Favorilere eklendi";
-"removed_from_favorites" = "Favorilerden çıkarıldı";
-"added_to_album" = "Albümle eklendi";
-"downloaded_files" = "%d dosya indirildi";
-"edit_saved" = "Kaydedildi";
-"files_moved" = "Dosya(lar) taşındı";
-"success_remove_passcode" = "Parola kaldırıldı";
-"added_to_favorites_from_lifebox" = "Albume eklendi";
-"edit_security_question_success" = "Güvenlik sorusu güncellendi";
-"set_security_question_success" = "Güvenlik sorusu eklendi";
-"import_from_instagram_started" = "Instagram’dan fotoğraf aktarma başlatıldı";
-"import_from_facebook_started" = "Facebook’tan fotoğraf aktarma başlatıldı";
-"instapick_hashtags_copied" = "Hashtag'ler kopyalandı";
-"create_story_selection_limit" = "Lütfen en fazla %d fotoğraf seçin";
-"etk_html" = "<p><b>TİCARİ ELEKTRONİK İLETİ VE VERİ İZNİ</b></p>\n\n<p>Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. ve <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Grup Şirketleri</a> tarafından ihtiyaç ve tercihlerim doğrultusunda tarafıma uygun indirimlerin, fırsatların ve özel tekliflerin belirlenebilmesi ve bu şirketlerin avantajlı ürün ve hizmetlerinden haberdar edilebilmem için “https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni” adresinden okuduğum “İzin Politikası” kapsamında kişisel verilerimin işlenmesini ve İzin Politikası’nda belirtilen taraflarla paylaşılmasını, 6563 sayılı Kanun ve diğer ilgili mevzuat uyarınca aksi tarafımca belirtilene kadar ticari elektronik ileti gönderilmesini kabul ediyorum. Kişisel verilerimin işlenmesini/paylaşılmasını ya da ticari elektronik ileti almak istememem durumunda vermiş olduğum izinleri iptal edebileceğimi, izinlerin kapsamı ve iptali hakkında detaylı bilginin “<a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">İzin Politikası</a>”nda yer aldığını biliyorum.</p>\n\n";
-"free_up_space_alert_title" = "Yer Aç";
-"free_up_space_no_duplicates" = "Hem cihazında hem lifebox'ında olan photo/video yok";
-"free_up_space_in_progress" = "Hazırlanıyor, lütfen daha sonra tekrar dene";
 "remove_albums_success_message" = "Albüm(ler) başarıyla kaldırıldı.";
 "hide_album_action_sheet" = "Albümü Gizle";
 "sign_up_password_rules" = "Şifre en az 6, en fazla 16 karakterden oluşmalı, en az bir rakam ve büyük harf, ardışık olmayan harfler içermelidir.";
