--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -990,7 +990,7 @@
 "create_story_press_and_hold_description" = "Drücken Sie auf %@ auf der Ansicht, um die Reihenfolge Ihres Bildes erneut zu ordnen.";
 "create_story_name_title" = "Name der Story";
 "create_story_pop_up_title" = "Erstellen Sie eine Story! \n%@";
-"create_story_pop_up_message" = "Ihre Story wird vorbereitet. Bei Abschluss können Sie sie unter %@ finden";
+"create_story_pop_up_message" = "Geschichte erstellt";
 "create_story_path_to_story" = "Bilder & Videos > Meine Storys";
 "You can not share empty album" = "Sie können kein leeres Album teilen";
 "etk_permission_description" = "Ich erteilte gemäß der Gesetzes-Nr. 6563 bezüglich vorteilhafter Produkte und Dienstleistungen von Turkcell und den Gemeinschaftsunternehmen sowie den sonstigen betreffenden Gesetzen, die Erlaubnis mir gewerbliche Nachrichten zu Informationszwecken per E-Mail zuzusenden, sofern ich nichts gegenteiliges angebe und nichts gegenseitiges beantrage.";
