--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1004,7 +1004,7 @@
 "create_story_press_and_hold_description" = "%@ на изображении, чтобы изменить порядок вашей истории.";
 "create_story_name_title" = "Имя истории";
 "create_story_pop_up_title" = "Вы создали историю!\n%@";
-"create_story_pop_up_message" = "Мы готовим вашу историю. Как только он закончен, вы можете найти его под\n%@";
+"create_story_pop_up_message" = "История создана";
 "create_story_path_to_story" = "Фото и Видео >  Мои истории";
 "You can not share empty album" = "Вы не можете поделиться пустым альбомом";
 "etk_permission_description" = "Настоящим я даю согласие на получение коммерческих сообщений по электронной почте, чтобы получать информацию о выгодных продуктах и ​​услугах Turkcell и компаний Группы до тех пор, пока я не потребую иного в соответствии с Законом № 6563 и другим применимым законодательством.";
