--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -992,7 +992,7 @@
 "create_story_press_and_hold_description" = "%@ на зображенні, щоб змінити порядок історії.";
 "create_story_name_title" = "Ім'я історії";
 "create_story_pop_up_title" = "Ви створили історію!\n%@";
-"create_story_pop_up_message" = "Ми готуємо вашу історію. Після завершення ви можете знайти його під\n%@";
+"create_story_pop_up_message" = "Історію створено";
 "create_story_path_to_story" = "Фото та Відео > Мої історії";
 "You can not share empty album" = "Не можна ділитися пустим альбомом";
 "etk_permission_description" = "Цим я даю згоду на отримання комерційних повідомлень по електронній пошті, щоб отримувати інформацію про вигідні пропозиції та послуги Turkcell  та компаній Групи до тих пір, доки я не буду вимагати іншого згідно з Законом №6563 або іншим законодавством.";
