--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1697,3 +1697,6 @@
 "contact_phase2_error_quota_backup" = "contact_phase2_error_quota_backup";
 "download_document_error_popup" = "You can only download photo, video or album";
 "contact_phase2_history_cell_Contact_List" = "Contact List";
+"contact_phase2_error_backup_title" = "contact_phase2_error_backup";
+"contact_phase2_error_restore_title" = "contact_phase2_error_restore";
+"contact_phase2_error_delete_title" = "contact_phase2_error_delete_title"
