--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1699,4 +1699,4 @@
 "contact_phase2_history_cell_Contact_List" = "Contact List";
 "contact_phase2_error_backup_title" = "contact_phase2_error_backup";
 "contact_phase2_error_restore_title" = "contact_phase2_error_restore";
-"contact_phase2_error_delete_title" = "contact_phase2_error_delete_title"
+"contact_phase2_error_delete_title" = "contact_phase2_error_delete_title";
