FE-2705 Redirecting to account details page when profile photo is clicked

--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1508,6 +1508,7 @@
 "settings_userinfo_phone" = "Phone Number";
 "settings_action_sheet_profile_details" = "Profile details";
 "settings_action_sheet_edit_profile_photo" = "Edit profile photo";
+"settings_action_sheet_account_details" = "Account details";
 "original_сopy_package_description" = "+ Back Up in Original Quality";
 "become_premium_navbar_title" = "Recommended for You";
 "become_premium_header_default_title" = "We have a special offer for you!";
