--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -606,6 +606,7 @@
 "Add GSM Number" = "Добавить номер телефона";
 "The videos larger than 4GB can not be uploaded to lifebox" = "Видео размером более 4ГБ не могут быт загружены в lifebox";
 "You have not enough memory in your device" = "В вашем устройстве недостаточно памяти";
+"The purchase was canceled" = "Покупка была отменена";
 "The purchase in progress" = "Идёт процесс покупки";
 "You have no duplicated contacts!" = "У вас нет дубликатов контактов";
 "Daily" = "1 раз в день";
@@ -1600,7 +1601,17 @@
 "contact_phase2_warning_popup_storage_limit_message" = "";
 "contact_phase2_warning_popup_storage_limit_settings_button" = "";
 "contact_phase2_error_iternal" = "";
-"contact_phase2_error_quota_restore" = "";
-"contact_phase2_error_quota_backup" = "";
 "download_document_error_popup" = "Вы можете загружать только фотографии, видео или альбомы.";
 "contact_phase2_history_cell_Contact_List" = "";
+"settings_action_sheet_account_details" = "";
+"contact_phase2_error_backup_title" = "";
+"contact_phase2_error_restore_title" = "";
+"contact_phase2_error_delete_title" = "";
+"gallery_filter_all" = "";
+"gallery_filter_synced" = "";
+"gallery_filter_unsynced" = "";
+"gallery_filter_action_sheet_all" = "";
+"gallery_filter_action_sheet_synced" = "";
+"gallery_filter_action_sheet_unsynced" = "";
+"contact_phase2_error_quota_restore" = "";
+"contact_phase2_error_quota_backup" = "";
